# MediocreRayTracer

./: CMakeLists.txt  Camera.cpp  Camera.h  Image.h  LightSource.cpp  LightSource.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  README.md  Ray.cpp  Ray.h  RayCaster.cpp  RayCaster.h  Scene.cpp  Scene.h  image.h  main.cpp
include/: AABB.h  AreaLightSource.h  BVH.h  Camera.h  Image.h  LightSource.h  Material.h  Mesh.h  Random.h  Ray.h  RayCaster.h  Scene.h  WorleyNoise.h
resources/: ball.off  ground.off  model.off  test.off
src/: AABB.cpp  AreaLightSource.cpp  BVH.cpp  Camera.cpp  LightSource.cpp  Material.cpp  Mesh.cpp  Ray.cpp  RayCaster.cpp  Scene.cpp
